--- a/.github/workflows/azure-functions-app-container.yml
+++ b/.github/workflows/azure-functions-app-container.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ dockerhub.DOCKER_USERNAME }}
-          password: ${{ dockerhub.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       # Build da imagem Docker
       - name: Build Docker Image
