--- a/.github/workflows/main_oi-sorria.yml
+++ b/.github/workflows/main_oi-sorria.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - oi-sorria
 
 on:
@@ -26,9 +23,10 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-
+          
+      # Atualize para zipar a pasta 'dist' ao invés do diretório raiz
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip ./dist
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -52,7 +50,7 @@ jobs:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: unzip release.zip -d dist
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -67,5 +65,4 @@ jobs:
         with:
           app-name: 'oi-sorria'
           slot-name: 'Production'
-          package: .
-          
+          package: ./dist
